--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="instructions">Click the Firework!</div>
+    <h1>hello</h1>
     <script src="fireworks.js"></script>
   </body>
 </html>
